# repixelizer

./: .gitignore  AGENTS.md  README.md  pyproject.toml
docs/: gamecult-hosted-access-architecture.md  hosted-auth-architecture.md  implementation-plan.md  lean-optimizer-algorithm-map.md  optimizer-algorithm-map.md  repixelizer-hosted-access-profile.md  spec.md  tile-graph-algorithm-map.md
examples/corpus/: README.md
frontend/: package-lock.json  package.json  tsconfig.json
frontend/src/: app.ts
notes/: fresh-workspace-handoff.md
scripts/: generate_readme_previews.py  render_focus_crop.py  run_gui.ps1  run_gui.py
src/repixelizer/: __init__.py  analysis.py  baselines.py  benchmark.py  cli.py  compare.py  continuous.py  corpus.py  diagnostics.py  discrete.py  gui.py  inference.py  io.py  metrics.py  observe.py  palette.py  params.py  phase_field.py  pipeline.py  preprocess.py  source_reference.py  synthetic.py  tile_graph.py  tuning.py  types.py
src/repixelizer/gui_static/: app.js  index.html  logo-preview.html  styles.css
state/: branches.json  evidence.jsonl  map.yaml  scratch.md
tests/: test_analysis.py  test_benchmark.py  test_cli.py  test_compare.py  test_continuous.py  test_corpus.py  test_gui.py  test_inference.py  test_metrics.py  test_palette.py  test_phase_field.py  test_pipeline.py  test_preprocess.py  test_source_reference.py  test_tile_graph.py  test_tuning.py
tests/fixtures/real/: ai-badge-cleaned.json  ai-badge-tip-focus.json  dense-landscape-focus.json  dense-landscape.json
tools/: repixelizer_prepare_compaction.py  repixelizer_state.py
